OGEMA 2.0.4 public release