@@ -4,11 +4,11 @@
     <parent>
         <artifactId>ref-impl</artifactId>
         <groupId>org.ogema.ref-impl</groupId>
-        <version>2.0.3</version>
+        <version>2.0.4</version>
     </parent>
     
     <artifactId>resource-manager</artifactId>
-    <version>2.0.3</version>
+    <version>2.0.4</version>
     <name>OGEMA ref-impl :: resource-manager</name>
 
     <packaging>bundle</packaging>
@@ -45,7 +45,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
-                    <argLine>-ea -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled</argLine>
+                    <argLine>-ea</argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -114,7 +114,7 @@
         <dependency>
             <groupId>org.ogema.ref-impl</groupId>
             <artifactId>security</artifactId>
-            <version>2.0.3</version>
+            <version>2.0.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
